--- a/NLP/main.ipynb
+++ b/NLP/main.ipynb
@@ -24,9 +24,9 @@
     "\n",
     "# Uncomment the following lines to print the version of each imports above\n",
     "\n",
-    "print(\"NLTK Version : {} \".format(nltk.__version__))\n",
-    "print(\"SkLearn Version : {} \".format(sklearn.__version__))\n",
-    "print(\"Python Version : {} \".format(sys.version))\n"
+    "# print(\"NLTK Version : {} \".format(nltk.__version__))\n",
+    "# print(\"SkLearn Version : {} \".format(sklearn.__version__))\n",
+    "# print(\"Python Version : {} \".format(sys.version))\n"
    ]
   },
   {
@@ -1108,13 +1108,6 @@
     "accuracy = nltk.classify.accuracy(model, testing)\n",
     "print(\"SVC Accuracy: {} \".format(accuracy))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
